[package]
name = "hangs"
version = "0.1.0"
authors = ["gabrielrc"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.20", features = ["full"] }
tokio-core = "0.1.17"
futures = { version = "0.3.5", features = ["compat"] }
